LAM domains run in PP_geo; still crash in expertise

--- a/conf/atos_bologna.ini
+++ b/conf/atos_bologna.ini
@@ -15,7 +15,7 @@ davaienv            = uenv:cy49t1.davai_specials.02@davai
 appenv_global       = uenv:cy50.arpege@4dvarfr.02@davai
 appenv_lam          = uenv:cy49t1.LAM@davai.01@davai
 appenv_fullpos_partners = uenv:cy49t0_to_T1.fullpos@partners.03@davai
-appenv_clim         = uenv:cy49t1_clim.01@davai
+appenv_clim         = uenv:cy49t1_clim.01@cv9
 commonenv           = ${appenv_global}
 uenv_gdata_detour   = davai_gmirror
 # pseudo-dataflow resources : shelves
@@ -375,7 +375,7 @@ rundate             = 2020081800
 prep_initial_geometry = geometry(global1198)
 pgd_source          = flow
 # profile (ntasks = ntasks/node)
-time                = 01:00:00
+time                = 00:10:00
 ntasks              = 1
 nnodes              = 1
 openmp              = 1
