Fixed problem with expertise in prep; due to too loose regex matching of filenames, leading to PGD.fa.d (a directory) also being checked for fields inside. Temporary solution is to restrict files to check by specifying filenames argument in expert definition.

--- a/conf/atos_bologna.ini
+++ b/conf/atos_bologna.ini
@@ -28,7 +28,7 @@ billing_account     = spfracco
 billing_account_ft  = spfracco
 davai_server        = https://www.umr-cnrm.fr/davai/
 ciboulai_token_file = /home/acrd/public/ciboulai/token.2022-10-20
-expertise_fatal_exceptions = False
+expertise_fatal_exceptions = True
 drhook_profiling    = True
 ignore_reference    = False
 archive_as_ref      = False
@@ -164,7 +164,8 @@ bathymetry_source   = etopo1
 bathymetry_geometry = global1min
 
 [lam_geometries]
-geometrys           = geometry(list(sps2500,nps2500,sm2500,nm2500,slcc2500,nlcc2500))
+#geometrys           = geometry(list(sps2500,nps2500,sm2500,nm2500,slcc2500,nlcc2500))
+geometrys           = geometry(list(nm2500))
 
 [gauss_grids]
 geometrys           = geometry(list(global63,global63c22))
