Restored functionality of pgd.py when domain is not created on-the-fly, e.g. for ARPEGE and for [P]PF jobs.

--- a/conf/atos_bologna.ini
+++ b/conf/atos_bologna.ini
@@ -164,8 +164,9 @@ bathymetry_source   = etopo1
 bathymetry_geometry = global1min
 
 [lam_geometries]
-#geometrys           = geometry(list(sps2500,nps2500,sm2500,nm2500,slcc2500,nlcc2500))
-geometrys           = geometry(list(nm2500))
+geometrys           = geometry(list(sps2500,nps2500,sm2500,nm2500,slcc2500,nlcc2500))
+make_domain         = True
+filtered_orography_in_pgd = True
 
 [gauss_grids]
 geometrys           = geometry(list(global63,global63c22))
@@ -376,7 +377,7 @@ rundate             = 2020081800
 prep_initial_geometry = geometry(global1198)
 pgd_source          = flow
 # profile (ntasks = ntasks/node)
-time                = 00:10:00
+time                = 01:00:00
 ntasks              = 1
 nnodes              = 1
 openmp              = 1
